--- a/task.users/src/main/resources/application.properties
+++ b/task.users/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=com.springSts-1
 spring.datasource.url=jdbc:mysql://localhost:3306/UsersDB?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Gaurav$17
+spring.datasource.username=username
+spring.datasource.password=Password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
